Redesign app as cyberpunk work calculator